fixed a few font issues and spacing issues

--- a/derivCalc/css/style.css
+++ b/derivCalc/css/style.css
@@ -7,6 +7,10 @@ body{
     color: aliceblue;
 }
 
+font{
+    font-family: Helvetica;
+}
+
 .calculator{
     display: flex;
     flex-direction: column;
